Fazendo a classe de teste